--- a/web1/src/app/admin/shop-list/shop-list.component.html
+++ b/web1/src/app/admin/shop-list/shop-list.component.html
@@ -112,7 +112,7 @@
                                                         </button>
                                                     </td>
                                                     <td [ngClass]="{'bcolor': data.Status == 0 }">{{dataList.length - i }}</td>
-                                                    <td [ngClass]="{'bcolor': data.Status == 0 }">{{data.ID}}</td>
+                                                    <td [ngClass]="{'bcolor': data.Status == 0 }">{{data.Sno}}</td>
                                                     <td [ngClass]="{'bcolor': data.Status == 0 }">{{data.Name}}</td>
                                                     <td [ngClass]="{'bcolor': data.Status == 0 }">{{data.AreaName}}</td>
                                                     <td [ngClass]="{'bcolor': data.Status == 0 }">{{data.MobileNo1 }}</td>
