--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -60,7 +60,7 @@
               <a *ngIf="viewFlag.viewCompanySetting" href="javascript:void(0)" [routerLink]="['/admin/companySetting']" id="collapseExample">Company Setting</a>
               <a *ngIf="viewFlag.viewSmsSetting" href="javascript:void(0)" [routerLink]="['/admin/smsSetting']" id="collapseExample">SMS Setting </a>
               <a *ngIf="viewFlag.viewLoginHistory" href="javascript:void(0)" [routerLink]="['/admin/companyLoginHistory']" id="collapseExample">Login History</a>
-              <a *ngIf="viewFlag.viewRecycleBin" href="javascript:void(0)" [routerLink]="['/admin/CompanyDashborad']">Recycle-Bin</a>
+              <a *ngIf="viewFlag.viewRecycleBin" href="javascript:void(0)" [routerLink]="['/admin/CompanyDashborad']" id="collapseExample">Recycle-Bin</a>
             </div>
           </div>
           
