--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -320,7 +320,7 @@
                                                             [(ngModel)]="spectacle.REDPAxis">
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="number" name="REDPVA"
+                                                        <input class="inputWidth box" type="text" name="REDPVA"
                                                             [(ngModel)]="spectacle.REDPVA" id="REDPVA" list="dpvaList">
                                                         <datalist id="dpvaList">
                                                             <option [value]="d.Name" *ngFor="let d of dataPVA">
@@ -355,7 +355,7 @@
                                                             [(ngModel)]="spectacle.LEDPAxis">
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="number" name="LEDPVA"
+                                                        <input class="inputWidth box" type="text" name="LEDPVA"
                                                             [(ngModel)]="spectacle.LEDPVA" id="LEDPVA" list="dpvaList">
                                                         <datalist id="dpvaList">
                                                             <option [value]="d.Name" *ngFor="let d of dataPVA">
@@ -397,7 +397,7 @@
                                                             [(ngModel)]="spectacle.RENPAxis">
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="number" name="RENPVA"
+                                                        <input class="inputWidth box" type="text" name="RENPVA"
                                                             [(ngModel)]="spectacle.RENPVA" id="RENPVA" list="dpvaList">
                                                         <datalist id="dpvaList">
                                                             <option [value]="d.Name" *ngFor="let d of dataPVA">
@@ -432,7 +432,7 @@
                                                             [(ngModel)]="spectacle.LENPAxis">
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="number" name="LENPVA"
+                                                        <input class="inputWidth box" type="text" name="LENPVA"
                                                             [(ngModel)]="spectacle.LENPVA" id="LENPVA" list="dpvaList">
                                                         <datalist id="dpvaList">
                                                             <option [value]="d.Name" *ngFor="let d of dataPVA">
