--- a/web1/src/app/shared/dashcard/dashcard.component.html
+++ b/web1/src/app/shared/dashcard/dashcard.component.html
@@ -15,7 +15,7 @@
 </a> -->
 
 <a href="javascript:void(0)" routerLink={{routersLinks}} class="hoc">
-    <div class="card ">
+    <div class="card " type="submit" (click)="function()">
         <div class="row" style="padding: 10px;">
             <div class="col-9 pt-3 p-0">
                     <span class="ml-auto name" style="font-size:25px;font-weight:600;margin-top:5%;">
