--- a/server/views/PurchasePDF.ejs
+++ b/server/views/PurchasePDF.ejs
@@ -1,6 +1,10 @@
 <html>
 <link rel="stylesheet" href="http://localhost:3000/assest/purchaseDetails.css">
-
+<style>
+    html body {
+        zoom: 100%;
+    }
+</style>
 <body>
     <section>
         <h4>Purchase Invoice</h4>
