--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -10,7 +10,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsbarcode/3.8.0/JsBarcode.all.js"></script>
     <script src="JsBarcode.all.min.js"></script>
 </head>
-
+<style>
+    html body {
+        zoom: 100%;
+    }
+</style>
 <body>
     <% if(data.length !==0){ data.forEach(function (i, index) { %>
         <% if (data.CompanyBarcode == 5){%>
