--- a/server/views/customerPowerPDF.ejs
+++ b/server/views/customerPowerPDF.ejs
@@ -22,7 +22,7 @@
          <div>
             <div style="border-bottom: 1px solid; width: 38%; position:absolute; margin-top: 1%;"> </div>
             <div style="border-bottom: 1px solid; width: 38%; float: right; position: relative; margin-top: 1%;"></div>
-            <span class="headingName">Computerized Eye Testing</span>
+            <span class="headingName"> COMPUTERIZED EYE TESTING </span>
          </div>
    </section>
 
