--- a/server/views/AssignSupplierPDF.ejs
+++ b/server/views/AssignSupplierPDF.ejs
@@ -1,6 +1,11 @@
 <html>
 <link rel="stylesheet" href="http://localhost:3000/assest/purchaseDetails.css">
 
+<style>
+    html body {
+        zoom: 100%;
+    }
+</style>
 <body>
     <section>
         <h2>Purchase Order </h2>
