--- a/server/views/TransferProduct.ejs
+++ b/server/views/TransferProduct.ejs
@@ -1,6 +1,10 @@
 <html>
 <link rel="stylesheet" href="http://localhost:3000/assest/TransferProduct.css">
-
+<style>
+    html body {
+        zoom: 100%;
+    }
+</style>
 <body>
     <div>
         <section>
