--- a/server/views/CreditNote.ejs
+++ b/server/views/CreditNote.ejs
@@ -26,65 +26,86 @@
              </div>
         </section>
 
-        <section style="width: 100%;">
+        <section style="width: 100%; height: 30px;">
             <div class="CustomerRow">
                 <div class="col1">
                     <ul class="ul1">
-                                <li>Invoice No</li>
-                                <li>Cust_ID</li>
-                                <li>Name</li>
-                                <li>MobileNo1</li>
+                        <li>Issued To:</li>   
                     </ul>
                     <ul class="ul2">
-                                <li>
-                                  344
-                                </li>
-                                <li>
-                                  4443
-                                </li>
-                                <li>
-                                    bbbb
-                                </li>
-                                <li>
-                                  8888
-                                </li>
+                        <li> ASDASFASFASF </li>
                     </ul>
                 </div>
-                <!-- <div class="col3">
-                    <h4>
-                        <%=data.bill%>
-                    </h4>
-                </div> -->
+                <div class="col3">
+                    <ul class="ul1">
+                        <li>Issue Date:</li>   
+                    </ul>
+                    <ul class="ul2">
+                        <li> 20-20-2020 </li>
+                    </ul>
+                </div>
+
                 <div class="col2">
                     <ul class="ul1">
-                                <li>Date</li>
-                                <li>Del. Date</li>
-                                <li>Rx BY</li>
-                                <li>GSTNo</li>
-                                <li>Sale Person</li>
+                                <li>MoblieNo.:</li>
                     </ul>
                     <ul class="ul2" >
-                                <li>
-                                    12
-                                </li>
-                                <li>
-                                    1221
-                                </li>
-                                <li>
-                                    1212
-                                </li>
-                                <li>
-                                   121
-                                </li>
-                                <li>
-                                   121
-                                </li>
-
+                                <li>919166666098 </li>
                     </ul>
                 </div>
             </div>
         </section>
        
+        <section style="width: 100%; height: 200px;">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Invoice No</th>
+                        <th>Invoice Date</th>
+                        <th>Payment Mode</th>
+                        <th>Payment Type</th>
+                        <th>Payment Reference No</th>
+                        <th>Amount</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>2309R00017 </td>
+                        <td>2023-10-02</td>
+                        <td>Customer Return</td>
+                        <td>Customer Credit</td>
+                        <td>2309R00017 </td>
+                        <td>-1000</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th>Total Previous Customer Credit</th>
+                        <th>1000  </th>
+                    </tr>
+                </tfoot>
+            </table>
+        </section>
+
+        <section style="width: 100%; ">
+            <div class="footerLast" >
+                <ul class="ui1">
+                    <li>Issued By :</li>
+                    <li>Place Of Issue :</li>
+                </ul>
+                <ul class="ui2">
+                    <li>OPTICALGURU</li>
+                    <li>RELINKSYS SOFTWARE,TH SCHONEAR SAMAROL, OPP-RAOSAHEB SAVEDI, A.NAGAR-414003</li>
+                </ul>
+            </div>
+            <div class="footerLast2" >
+
+            </div>
+        </section>
     </div>
 </body>
 </html>
